--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,7 @@ stackgres-k8s/src/api-web/src/main/resources/META-INF/resources/stackgres
 cypress.env.json
 videos/
 *.mp4
-doc/themes/sg-doc/static/sg-swagger.yaml
 
+# Built project info
+doc/themes/sg-doc/static/sg-swagger.yaml
+stackgres-k8s/src/api-web/swagger-merged.yaml
